@@ -8,6 +8,7 @@
 		<setting label="[B]Desi Rulez[/B]" type="lsep" />
 		<setting id="drChannelType" label="Select channels category" type="enum" default="0" lvalues="30001|30002|30003"/>
 		<setting id="drForceRefresh" label="Force TV Shows data refresh next time when add-on starts" type="bool" default="false" />
+		<setting id="drHideFinished" label="Hide finished tv shows" type="bool" default="true" />
 	</category>
 <!--	<category label="Live">
  hide WatchSunTV.com streams until it is not working	
