@@ -1,3 +1,6 @@
+[B]Version 2.1.6[/B]
+- Added finished TV Shows, enabled if set in settings.
+
 [B]Version 2.1.5[/B]
 - Added TV Show label on focused favorite.
 - Added Back button control using add-on settings.
